# Wisper

./: pyproject.toml
src/wisper-api/: wisper.py
webpage/: main.html  tmp.html
