[tool.poetry]
name = "wisper-api"
version = "0.1.0"
description = "Web service for wisper api used to analyze query processes"
authors = ["TheAlchemist <sebastian.hansen_vega@outlook.com>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python ="==3.8"
pyarrow = "8.0.0"
snowflake-connector-python = "^3.0.1"
snowflake-snowpark-python = "^1.2.0"
pandas = "^1.5.3"
pytest = "^7.2.2"
openai = "^0.27.2"
SpeechRecognition = "^3.10.0"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
